--- a/primid/primid.pom/pom.xml
+++ b/primid/primid.pom/pom.xml
@@ -11,4 +11,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <repositories>
+        <repository>
+            <id>csw-releases</id>
+            <name>csw releases</name>
+            <url>http://157.253.238.75:8081/content/repositories/releases/</url>
+        </repository>
+    </repositories>
 </project>
