--- a/primid/primid.pom/pom.xml
+++ b/primid/primid.pom/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>co.edu.uniandes.Primid</groupId>
-    <artifactId>Servidor-JAXRS</artifactId>
+    <artifactId>ServidorPrimid</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
@@ -19,4 +19,5 @@
             <url>http://157.253.238.75:8081/content/repositories/releases/</url>
         </repository>
     </repositories>
+    <name>ServidorPrimid</name>
 </project>
