--- a/primid-pom/pom.xml
+++ b/primid-pom/pom.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>co.edu.uniandes.Primid</groupId>
-    <artifactId>ServidorPrimid</artifactId>
+    <groupId>co.edu.uniandes.csw.primid</groupId>
+    <artifactId>primid-pom</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module> primid </module>
-        <module> primid-logic </module>
+        <module>../primid</module>
+        <module>../primid-logic</module>
     </modules>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    <repositories>
+
+     <repositories>
         <repository>
             <id>csw-releases</id>
             <name>csw releases</name>
             <url>http://157.253.238.75:8081/content/repositories/releases/</url>
         </repository>
     </repositories>
-    <name>ServidorPrimid</name>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <name>primid-pom</name>
 </project>
