--- a/primid/pom.xml
+++ b/primid/pom.xml
@@ -9,18 +9,15 @@
 
     <name>primid</name>
 
-      <parent>
-        <groupId>co.edu.uniandes.rest.aplication</groupId>
-        <artifactId>primid</artifactId>
+    <parent>
+        <groupId>co.edu.uniandes.csw.primid</groupId>
+        <artifactId>primid-pom</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../primid-pom</relativePath>
     </parent>
 
    <dependencies>
-        <dependency>
-            <groupId>co.edu.uniandes.csw.primid.logic</groupId>
-            <artifactId>primid-logic</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
