--- a/primid/pom.xml
+++ b/primid/pom.xml
@@ -9,15 +9,13 @@
 
     <name>primid</name>
 
-    <parent>
-        <groupId>co.edu.uniandes.csw.primid</groupId>
-        <artifactId>primid-pom</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <relativePath>../primid-pom</relativePath>
-    </parent>
 
-   <dependencies>
-        
+    <dependencies>
+        <dependency>
+            <groupId>co.edu.uniandes.csw.primid</groupId>
+            <artifactId>primid-pom</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
