--- a/primid/pom.xml
+++ b/primid/pom.xml
@@ -9,11 +9,10 @@
 
     <name>primid</name>
 
-
     <dependencies>
         <dependency>
             <groupId>co.edu.uniandes.csw.primid</groupId>
-            <artifactId>primid-pom</artifactId>
+            <artifactId>primid-logic</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
